--- a/src/main/resources/docker-compose.yaml
+++ b/src/main/resources/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   mysql:
-    image: mysql:latest
+    image: mysql:5.7
     container_name: mysql-db
     restart: always
     environment:
@@ -25,10 +25,25 @@ services:
     networks:
       - geo-network
 
+  postgres:
+    build: postgres-with-pgloader
+    container_name: postgres-db
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: "root"
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - geo-network
+
 volumes:
   mysql-data:
   redis-data:
+  postgres-data:
 
 networks:
   geo-network:
     driver: bridge
+
